Fix display on smaller screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,17 +3,26 @@ html {
 }
 
 body {
+  height: 100%;
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
   background: linear-gradient(to top, #010305, #180125);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .container {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat( auto-fit, minmax(500px, 1fr) );
   grid-gap: 50px;
   padding: 50px;
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    grid-template-columns: repeat( auto-fit, minmax(300px, 1fr) );
+  }
 }
 
 .box {
@@ -24,7 +33,6 @@ body {
   transition: all 0.3s ease;
   cursor: pointer;
   width: 100%;
-  /* height: 520px; */
 }
 
 .box:hover {
